--- a/src/Components/SelectState/SelectState.css
+++ b/src/Components/SelectState/SelectState.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-direction: column;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     /* justify-content: space-evenly; */
     align-items: center;
     /* align-content: space-evenly; */
