--- a/src/Components/SelectState/SelectState.css
+++ b/src/Components/SelectState/SelectState.css
@@ -1,26 +1,27 @@
+:root {
+    --mainColor: rgb(228, 115, 74);
+  }
+
 .main {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    /* justify-content: space-evenly; */
-    align-items: center;
-    /* align-content: space-evenly; */
-    height: 100%;
-    width: 100%;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.statesTitle {
+    display: flex;
+    justify-content: center;
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    align-content: space-evenly;
-    background: white;
-    width: 95vw;
-    align-items: center;
-    align-content: center;
-    height: 100vh;
+    width:95%;
+    display: flex;
+    align-items: flex-start;
     flex-wrap: wrap;
+    height: 100%;
+    padding: 10px;
 }
 
 .stateContainer {
@@ -32,19 +33,36 @@
     flex-basis: 90px;
     width: 220px;
     height: 100%;
-    background: black;
+    background: grey;
     /* margin: 0 auto; */
+    margin: 10px;
 }
 
 .stateButton {
-    color: white;
-    background: black;
+    color: black;
+    /* background: grey; */
     border: none;
     text-decoration: none;
+    background:
+    linear-gradient(
+      to bottom, var(--mainColor) 0%,
+      var(--mainColor) 100%
+    );
+   background-position: 0 100%;
+   background-repeat: repeat-x;
+   background-size: 4px 0px;
+   transition: background-size .4s;
+
 }
+
+.stateButton:hover {
+    background-size: 4px 100%;
+
+  }
 
 .stateImage {
     height: 200px ;
     width: 200px ;
+
 }
 
