--- a/src/Components/SelectState/SelectState.css
+++ b/src/Components/SelectState/SelectState.css
@@ -1,6 +1,4 @@
-:root {
-    --mainColor: rgb(228, 115, 74);
-  }
+
 
 .main {
     display: flex;
@@ -16,12 +14,12 @@
 
 .container {
     justify-content: space-evenly;
-    width:95%;
+    width:90%;
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
     height: 100%;
-    padding: 10px;
+    padding: 75px 50px 50px 50px;
 }
 
 .stateContainer {
@@ -36,10 +34,19 @@
     background: grey;
     /* margin: 0 auto; */
     margin: 10px;
+    position: relative;
 }
 
+
+
 .stateButton {
-    color: black;
+    height: 30px;
+    color: rgb(250, 250, 250);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
     /* background: grey; */
     border: none;
     text-decoration: none;
@@ -52,12 +59,18 @@
    background-repeat: repeat-x;
    background-size: 4px 0px;
    transition: background-size .4s;
-
+   letter-spacing: 2px;
+   font-weight: bold;
+   font-size: 22px;
+   text-shadow: 3px 2px 3px black;
 }
+
 
 .stateButton:hover {
     background-size: 4px 100%;
-
+    height: 100%;
+    color: white;
+    transition: .6s
   }
 
 .stateImage {
