--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,12 +7,13 @@
 }
 
 .homeContainer {
+    /* position: absolute; */
     display: flex;
     width: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100%;
 }
 
 .imgContainer {
