--- a/src/Components/Trails/Trails.css
+++ b/src/Components/Trails/Trails.css
@@ -1,4 +1,27 @@
-.trailButtons {
-    width: 200px;
-    height: 200px;
+.mainTrails {
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.trailsContainer {
+    display: flex;
+    width: 90%;
+    flex-wrap: wrap;
+    height: 100%;
+    padding: 100px 50px 50px 50px;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    align-content: stretch;
+}
+
+
+
+.singleTrailInfo {
+    flex-basis: 90px;
+    width: 300px;
+    height:250px;
+    padding: 30px;
+
 }
