--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -18,8 +18,13 @@
 
 .imgContainer {
     width: 100%;
-    position: absolute;
+    position: relative;
     top: 0;
+}
+
+.overlay {
+    background: rgba(0,0,0,0.2);
+
 }
 
 .homeContainer > div {
@@ -34,15 +39,30 @@
 }
 
 .login-display {
-    background: red;
+    background: none;
+    color:white;
+    font-family: 'Shadows Into Light Two', cursive;
+    font-size: 65px;
     position: absolute;
-    width: 500px;
-    height: 30px;
-    box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.39);
+    width: 60vw;
+    height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
+}
+
+#welcomeText {
+    margin-top: 25px;
+    font-size: 60px;
+    text-align: center;
+
+    -webkit-animation: fadein 4s; 
+}
+
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .homeContainer img{
