--- a/src/Components/SelectCity/SelectCity.css
+++ b/src/Components/SelectCity/SelectCity.css
@@ -1,3 +1,56 @@
 .cities {
     margin-top: 100px;
 }
+.loader {
+    height: 170px;
+    width: 170px;
+}
+
+.cube {
+    background: darkgrey;
+    height: 50px;
+    widths: 50px;
+    animation: loader 2s infinite;
+    margin: auto;
+    display: inline-block;
+}
+
+@-webkit-keyframes loader {
+    0% {
+        transform: scale(0)
+    }
+    50% {
+        transform: scale(1)
+    }
+    100% {
+        transform: scale(0)
+    }
+}
+
+.cube:nth-child(1) {
+    animation-delay: 0.4s;
+}
+.cube:nth-child(2) {
+    animation-delay: 0.6s;
+}
+.cube:nth-child(3) {
+    animation-delay: 0.8s;
+}
+.cube:nth-child(4) {
+    animation-delay: 0.2s;
+}
+.cube:nth-child(5) {
+    animation-delay: 0.4s;
+}
+.cube:nth-child(6) {
+    animation-delay: 0.6s;
+}
+.cube:nth-child(7) {
+    animation-delay: 0.0s;
+}
+.cube:nth-child(8) {
+    animation-delay: 0.2s;
+}
+.cube:nth-child(9) {
+    animation-delay: 0.4s;
+}
