--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -16,8 +16,9 @@
 }
 
 .personalContainer {
-    width: 35%;
+    width: 37%;
     padding: 20px;
+    border: 2px black solid;
 }
 
 .profileInfo {
