--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,13 +1,8 @@
 
 :root {
-    --mainColor: rgb(204, 204, 204);
+    --mainColor: rgb(39, 124, 50);
   }
 
-.logo {
-    /* align-content: center; */
-    height: 80px;
-    width: 80px;
-}
 
 .webTitle{
     font-size: 25px;
@@ -24,7 +19,7 @@
       display: flex;
       background: none;
       height: 80px;
-      
+      /* margin-bottom:10%; */
       width: 100vw;
       flex-direction: row-reverse;
       align-items: center;
@@ -40,23 +35,10 @@ a {
     text-decoration: none;
 }
     
-.userNameBox {
-    order: 3;
-    display: flex;
-    height: 80px;
-    align-items: center;
-    align-content: flex-start;
-    justify-content: flex-start;
-    padding: 20px;
-    margin-right: 350px;
-    flex-direction: column;
-    color:black
-}
-
 
 .buttonContainer {
     display: flex;
-    height: 80px;
+    height: 10vh;
     align-items: stretch;
 }
 
@@ -78,13 +60,12 @@ a {
     font-size: 15px;
     letter-spacing: 2px;
     font-weight: bold;
-
-
 }
 
 .navButton:hover {
     background-size: 4px 90px;
   }
+
 
   #profileButton {
     font-size: 15px;
