--- a/src/Components/Trails/Trails.css
+++ b/src/Components/Trails/Trails.css
@@ -5,23 +5,132 @@
 }
 
 .trailsContainer {
+    flex-direction: row;
+    justify-content: space-evenly;
+    width:85%;
     display: flex;
-    width: 90%;
+    align-items: center;
     flex-wrap: wrap;
     height: 100%;
-    padding: 100px 50px 50px 50px;
-    justify-content: space-evenly;
-    flex-direction: row;
-    align-items: center;
+    padding: 75px 50px 50px 50px;
     align-content: stretch;
 }
 
-
-
 .singleTrailInfo {
+    margin: 7%;
+    align-self: stretch;
+    order: 0;
+    flex: 0 0 0px;
+    flex-grow: 0;
+    flex-shrink: 0;
     flex-basis: 90px;
-    width: 300px;
-    height:250px;
-    padding: 30px;
-
+    width: 250%;
+    height: 100%;
+    background: var(--mainColor);
+    position: relative;
 }
+
+.trailButton {
+    color: rgb(250, 250, 250);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 250%;
+    z-index: 9999;
+    /* background: grey; */
+    border: none;
+    text-decoration: none;
+    background:
+    linear-gradient(
+      to bottom, var(--mainColor) 0%,
+      var(--mainColor) 100%
+    );
+   background-position: 0 100%;
+   background-repeat: repeat-x;
+   background-size: 4px 0px;
+   transition: background-size .4s;
+   letter-spacing: 2px;
+   font-weight: bold;
+   font-size: 15px;
+   text-shadow: 3px 3px 3px black;
+}
+
+.trailButton:hover {
+    background-size: 4px 100%;
+    height: 100%;
+    color: white;
+    transition: .6s
+}
+
+#trailImg {
+    height: 250%;
+    width: 250%;
+}
+
+.pagination {
+    padding-bottom: 4%;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center; }
+    .pagination ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      text-align: center; }
+    .pagination li {
+      display: inline; }
+    .pagination a {
+      border-radius: 3px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px;
+      margin: 1px 2px;
+      padding: 5px 10px;
+      display: inline-block;
+      border-top: 1px solid #fff;
+      text-decoration: none;
+      color: #717171;
+      font-size: smaller;
+      font-family: "Helvetica Neueu", Helvetica, Arial, sans-serif;
+      text-shadow: white 0 1px 0;
+      background-color: #f5f5f5;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#eaeaea));
+      background-image: -webkit-linear-gradient(top, #f9f9f9, #eaeaea);
+      background-image: -moz-linear-gradient(top, #f9f9f9, #eaeaea);
+      background-image: -ms-linear-gradient(top, #f9f9f9, #eaeaea);
+      background-image: -o-linear-gradient(top, #f9f9f9, #eaeaea);
+      background-image: linear-gradient(top, #f9f9f9, #eaeaea);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#f9f9f9', EndColorStr='#eaeaea'); }
+      .pagination a:first-child, .pagination a.first {
+        margin-left: 0; }
+      .pagination a:last-child, .pagination a.last {
+        margin-right: 0; }
+      .pagination a:hover, .pagination a:focus {
+        border-color: #fff;
+        background-color: #fdfdfd;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#fafafa));
+        background-image: -webkit-linear-gradient(top, #fefefe, #fafafa);
+        background-image: -moz-linear-gradient(top, #fefefe, #fafafa);
+        background-image: -ms-linear-gradient(top, #fefefe, #fafafa);
+        background-image: -o-linear-gradient(top, #fefefe, #fafafa);
+        background-image: linear-gradient(top, #fefefe, #fafafa);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fefefe', EndColorStr='#fafafa'); }
+      .pagination a.more {
+        box-shadow: 0 0 0 0 transparent;
+        border: 0 none;
+        background: transparent;
+        margin-left: 0;
+        margin-right: 0; }
+      .pagination a.active {
+        box-shadow: rgba(0, 0, 0, 0.75) 0 0 0 0 inset;
+        border-color: #505050;
+        color: #f2f2f2;
+        text-shadow: black 0 1px 0;
+        background-color: #676767;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#5f5f5f), to(#5c5c5c));
+        background-image: -webkit-linear-gradient(top, #5f5f5f, #5c5c5c);
+        background-image: -moz-linear-gradient(top, #5f5f5f, #5c5c5c);
+        background-image: -ms-linear-gradient(top, #5f5f5f, #5c5c5c);
+        background-image: -o-linear-gradient(top, #5f5f5f, #5c5c5c);
+        background-image: linear-gradient(top, #5f5f5f, #5c5c5c);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#5f5f5f', EndColorStr='#5c5c5c'); }
+  
