--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,13 +7,19 @@
 }
 
 .homeContainer {
-    /* position: absolute; */
+    position: absolute;
+    background-image: url('../../photos/clouds-conifers-daylight.jpg');
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: 90%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: 75px 0 0 0
+    
+    /* min-width: 700px; */
 }
 
 .imgContainer {
@@ -67,6 +73,29 @@
 
 .homeContainer img{
     width: 100%;
+    height: 100%
 
 }
 
+
+@media( max-width: 700px){
+    #welcomeText {
+        font-size: 30px;
+        text-align: center;
+    
+        -webkit-animation: fadein 4s; 
+    }
+    
+    .homeContainer {
+        background-size: 130%;
+        background-image: url('../../photos/waterfall.jpeg');
+
+    }
+
+    .homeContainer .login-display {
+        position: relative;
+
+    }
+
+
+}
