--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -25,6 +25,7 @@
       align-items: center;
       font-family: 'Montserrat', sans-serif;
       z-index: 1;
+      /* min-width: 700px; */
     }
     
 a {
@@ -33,6 +34,8 @@ a {
     font-size: 15px;
     color: black;
     text-decoration: none;
+    
+    
 }
     
 
@@ -40,6 +43,7 @@ a {
     display: flex;
     height: 10vh;
     align-items: stretch;
+    
 }
 
 .navButton {
@@ -60,15 +64,19 @@ a {
     font-size: 15px;
     letter-spacing: 2px;
     font-weight: bold;
+    
 }
 
 .navButton:hover {
     background-size: 4px 90px;
+    
+    
   }
 
 
   #profileButton {
     font-size: 15px;
+    
 
     -webkit-animation: fadein 4s; 
   }
@@ -92,7 +100,103 @@ a {
     -webkit-animation: fadein 7s; 
   }
 
+  .hamburgerButton {
+    display: none;
+  }
+
   @-webkit-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+@media( max-width: 700px){
+  .hamburgerButton {
+    display: initial;
+        position: fixed;
+        z-index: 1;
+        height: 60px;
+        width: 60px;
+        font-size: 24px;
+        border-radius: 50%;
+        top: 30px;
+        right: 30px;
+    
+  }
+
+.NavBack {
+  height: 100vh;
+  width: 160px;
+  background-color: var(--mainColor);
+  z-index: 5;
+  position: fixed;
+}
+
+.hamburgerButton{
+  display: flex;
+}
+
+.webTitle {
+  display: none;
+}
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+
+}
+
+#profileButton {
+  font-size: 15px;
+  
+
+}
+
+
+#authButton {
+  font-size: 15px;
+
+}
+
+#findTrailsButton {
+  font-size: 15px;
+
+}
+
+#homeButton {
+  font-size: 15px;
+
+}
+
+
+header {
+  position: relative;
+  z-index: 9999;
+  transition: .3s;
+}
+
+  header > nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: grey;
+    transform: translate(0px, 100vh);
+    transition: 1s;
+    z-index: 10000;
+  }
+
+  header nav ul {
+    /* display flex is unneeded here but is still being shown because of the specification above with it */
+    /* display: flex; */
+    min-width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    padding: 20px 0;
+    }
+
+    .show {
+      transform: translate(0px, 0px)
+      }
+
+    .hide {
+      transform: translate(-165px, 0px)
+      }
 }
