--- a/src/Components/Trails/Trail.css
+++ b/src/Components/Trails/Trail.css
@@ -1,6 +1,6 @@
 .mainContainer {
-    height: auto;
-    width: auto;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -15,8 +15,9 @@
     align-items: center;
     align-content: center;
     position: relative;
-    padding-top: 40%;
-    height: 40%;
+    padding-top: 30%;
+    padding-bottom: 0;
+    height: 30%;
 
     /* align-content: center; */
     /* background: rgb(228, 115, 74); */
@@ -38,10 +39,11 @@
     max-height: 600px;
     width: auto;
     height: auto;
-
+    border-radius: 10px;
 }
 
 .infoContainer {
+    border-radius: 10px;
     justify-content: center;
     display: flex;
     max-width: 600px;
@@ -103,6 +105,7 @@
     justify-content: center;
     background: rgb(204, 204, 204);
     align-content: center;
+    border-radius: 10px;
     margin: 4px;
     width: 60vw;
     position: relative;
@@ -116,4 +119,12 @@
     align-content: center;
     align-items: center;
     flex-direction: column;
+    padding:1%;
+}
+
+.weather {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
 }
