--- a/src/Components/Trails/Trails.css
+++ b/src/Components/Trails/Trails.css
@@ -1,3 +1,5 @@
+
+
 .mainTrails {
     display: flex;
     justify-content: center;
@@ -67,6 +69,129 @@
     height: 250%;
     width: 250%;
 }
+
+.styledButtonAnimation {
+  width: 25px;
+  height: 25px;
+  background-color: rgb(39, 124, 50);
+  border-radius: 10px;
+  color: white;
+  position: relative;
+  transition: width .7s .3s;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.visitedButtonAnimation {
+  width: 25px;
+  height: 25px;
+  background-color: rgb(39, 124, 50);
+  border-radius: 10px;
+  color: white;
+  position: relative;
+  transition: width .7s .3s;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.styledButtonAnimation > button {
+  border: none;
+  background: none;
+  margin: 0;
+  padding: 0;
+}
+
+.visitedButtonAnimation > button {
+  border: none;
+  background: none;
+  margin: 0;
+  padding: 0;
+}
+
+.styledButtonAnimation i {
+  position: absolute;
+  left:0;
+  right:0;
+  text-align: center;
+  padding: 6.2px;
+  font-size: 13px;
+  transition: opacity 0.7s 0.7s;
+}
+
+.visitedButtonAnimation i {
+  position: absolute;
+  left:0;
+  right:0;
+  text-align: center;
+  padding: 6.2px;
+  font-size: 13px;
+  transition: opacity 0.7s 0.7s;
+}
+
+
+.styledButtonAnimation::after {
+  content: "Post Review";
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 6.2px 0;
+  padding-bottom: 0;
+  width: 100%;
+  font-size: 13px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.visitedButtonAnimation::after {
+  content: "Visited";
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 6.2px 0;
+  padding-bottom: 0;
+  width: 100%;
+  font-size: 13px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.styledButtonAnimation:hover {
+  width: 100px;
+  transition: width 0.7s;
+}
+
+.visitedButtonAnimation:hover {
+  width: 100px;
+  transition: width 0.7s;
+}
+
+.styledButtonAnimation:hover i {
+  transition: opacity 0.7s;
+  opacity: 0;
+}
+
+.visitedButtonAnimation:hover i {
+  transition: opacity 0.7s;
+  opacity: 0;
+}
+
+.styledButtonAnimation:hover::after {
+  opacity: 1;
+  transition: opacity 0.7s 0.7s
+}
+
+.visitedButtonAnimation:hover::after {
+  opacity: 1;
+  transition: opacity 0.7s 0.7s
+}
+
+
+
+
+
+
 
 .pagination {
     padding-bottom: 4%;
