--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,6 +1,6 @@
 
 :root {
-    --mainColor: rgb(39, 124, 50);
+    --mainColor: darkgrey;
   }
 
 
@@ -115,24 +115,30 @@ a {
         position: fixed;
         z-index: 1;
         height: 60px;
-        width: 60px;
+        width: 80px;
         font-size: 24px;
-        border-radius: 50%;
+        border-radius: 10px;
         top: 30px;
         right: 30px;
+        font-size: 20px
+        
     
   }
 
 .NavBack {
   height: 100vh;
   width: 160px;
-  background-color: var(--mainColor);
+  background-color: darkgrey;
   z-index: 5;
   position: fixed;
 }
 
 .hamburgerButton{
+  color: white;
   display: flex;
+  /* position: absolute; */
+  z-index: 6;
+  background: black;
 }
 
 .webTitle {
