--- a/src/Components/Profile/UsersReviews.css
+++ b/src/Components/Profile/UsersReviews.css
@@ -9,17 +9,21 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    padding: 5%;
     
     /* margin-top: 20%; */
 }
 
 .usersReviewsContainer {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     /* border: 2px black; */
     background: darkgrey;
     border-radius: 10px;
     justify-content: center;
+    padding: 5%;
+    margin-top: 40%
+    
 
 }
 
@@ -30,8 +34,8 @@
 
 .trailReview {
     display:flex;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 6%;
+    padding-bottom: 6%;
     width: 100%;
     height: 10%;
 
@@ -39,5 +43,6 @@
 
 .trailReview > p {
     width: 100%;
+    padding: 14px;
     /* height: 10%; */
 }
